--- a/res/layout/hometimeline.xml
+++ b/res/layout/hometimeline.xml
@@ -18,6 +18,6 @@
 			android:layout_below="@+id/NoAuthText" android:id="@+id/Signin"
 			android:text="@string/signin_button"></Button>
 	</RelativeLayout>
-	<ListView android:layout_below="@+id/TextView01" android:id="@android:id/list"
+	<ListView android:id="@android:id/list"
 		android:layout_width="fill_parent" android:layout_height="fill_parent" android:visibility="visible"></ListView>
 </RelativeLayout>
